modified buildspec with python version

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 
 .aws-sam/*
+template.yml
+
+
 # Created by https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
 
 ### Linux ###
