s3 for lambda need to be in same region

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -3,7 +3,7 @@ version = 0.1
 [default.deploy]
 [default.deploy.parameters]
 stack_name = "cloudnokku-serverless-resource"
-s3_bucket = "testabcd123ab"
+s3_bucket = "cloudnokku-sam-lambda"
 s3_prefix = "sam-app"
 region = "us-east-1"
 confirm_changeset = true
