--- a/template.yaml
+++ b/template.yaml
@@ -5,6 +5,17 @@ Description: >
 
   Sample SAM Template for cloudNokku-sam-lambda
 
+Parameters:
+  InferenceImage:
+    Type: String
+  InferenceS3ModelLocation:
+    Type: String
+  ExecutionRoleArnParameter:
+    Type: String
+  SecurityGroups:
+    Type: String
+  Subnets:
+    Type: String
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
@@ -23,6 +34,49 @@ Resources:
       #     Properties:
       #       Path: /hello
       #       Method: get
+  
+    
+  # SagemakerInferenceModel:
+  #   Type: 'AWS::SageMaker::Model'
+  #   Properties:
+  #     ModelName: "cloudnokku_inference_model"
+  #     PrimaryContainer:
+  #       Image: !Ref InferenceImage
+  #       ModelDataUrl: !Ref InferenceS3ModelLocation
+  #     ExecutionRoleArn: !Ref ExecutionRoleArnParameter 
+  #     VpcConfig:
+  #       SecurityGroupIds: !Split [',',!Ref SecurityGroups]
+  #       Subnets: !Split [',',!Ref Subnets]
+  
+  # SagemakerEndPointConfigInference:
+  #   Type: 'AWS::SageMaker::EndpointConfig'
+  #   Properties:
+  #     EndpointConfigName: "cloudnokku_inference_endpoint_config"
+  #     ProductVariants:
+  #       - InstanceType: "ml.t2.medium"
+  #         InitialVariantWeight: 1
+  #         InitialInstanceCount: 1
+  #         ModelName: "cloudnokku_inference_model"
+  #         VariantName: 'AllTraffic'
+  #   DependsOn:
+  #     - SagemakerInferenceModel
+
+  # SagemakerEndpointInference:
+  #   Type: "AWS::Sagemaker::Endpoint"
+  #   Properties:
+  #     EndpointName: "cloudnokku_inference_endpoint"
+  #     EndpointConfigName: "cloudnokku_inference_endpoint_config"
+  #   DependsOn:
+  #     - SagemakerEndPointConfigInference
+
+  MyLayer:
+    Type: AWS::Serverless::LayerVersion
+    Properties:
+      ContentUri: my_layer
+      CompatibleRuntimes:
+        - python3.8
+    Metadata:
+      BuildMethod: makefile
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
@@ -37,3 +91,4 @@ Outputs:
   HelloWorldFunctionIamRole:
     Description: "Implicit IAM Role created for Hello World function"
     Value: !GetAtt HelloWorldFunctionRole.Arn
+  
