--- a/my_layer/Makefile
+++ b/my_layer/Makefile
@@ -1,2 +1,3 @@
-mkdir -p "$(ARTIFACTS_DIR)/python"
-python -m pip install -r requirements.txt -t "$(ARTIFACTS_DIR)/python"
+build-MyLayer:
+    mkdir -p "$(ARTIFACTS_DIR)/python"
+    python -m pip install -r requirements.txt -t "$(ARTIFACTS_DIR)/python"
