--- a/template.yaml
+++ b/template.yaml
@@ -22,12 +22,12 @@ Globals:
     Timeout: 3
 
 Resources:
-  HelloWorldFunction:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
-    Properties:
-      CodeUri: hello_world/
-      Handler: app.lambda_handler
-      Runtime: python3.7
+#   HelloWorldFunction:
+#     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+#     Properties:
+#       CodeUri: hello_world/
+#       Handler: app.lambda_handler
+#       Runtime: python3.7
       # Events:
       #   HelloWorld:
       #     Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
@@ -74,7 +74,7 @@ Resources:
     Properties:
       ContentUri: my_layer
       CompatibleRuntimes:
-        - python3.7
+        - python3.8
     Metadata:
       BuildMethod: Makefile
 
