--- a/template.yaml
+++ b/template.yaml
@@ -76,7 +76,7 @@ Resources:
       CompatibleRuntimes:
         - python3.8
     Metadata:
-      BuildMethod: makefile
+      BuildMethod: Makefile
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
