--- a/template.yaml
+++ b/template.yaml
@@ -31,12 +31,12 @@ Resources:
       Layers:
         - !Ref libs
         - !Ref MyLayer
-      # Events:
-      #   HelloWorld:
-      #     Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
-      #     Properties:
-      #       Path: /hello
-      #       Method: get
+      Events:
+         HelloWorld:
+           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+           Properties:
+             Path: /hello
+             Method: get
   
     
   # SagemakerInferenceModel:
