--- a/template.yaml
+++ b/template.yaml
@@ -75,6 +75,16 @@ Resources:
     DependsOn:
       - SagemakerEndPointConfigInference
 
+  InferenceFunction:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Properties:
+      CodeUri: inference/
+      Handler: app.lambda_handler
+      Runtime: python3.7
+      Layers:
+        - !Ref libs
+        - !Ref MyLayer
+  
   MyLayer:
     Type: AWS::Serverless::LayerVersion
     Properties:
